--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,26 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/nav_graph"
-  app:startDestination="@+id/launcherFragment">
+  app:startDestination="@+id/searchFragment">
 
   <fragment
-    android:id="@+id/launcherFragment"
-    android:name="org.galio.bussantiago.features.LauncherFragment"
-    tools:layout="@layout/launcher_fragment"></fragment>
+    android:id="@+id/searchFragment"
+    android:name="org.galio.bussantiago.features.search.SearchFragment"
+    tools:layout="@layout/search_fragment">
+
+    <action
+      android:id="@+id/actionShowLines"
+      app:destination="@id/linesFragment" />
+
+    <action
+      android:id="@+id/actionShowFavorites"
+      app:destination="@id/favoritesFragment" />
+
+    <action
+      android:id="@+id/actionShowAbout"
+      app:destination="@id/aboutFragment" />
+
+  </fragment>
 
   <fragment
     android:id="@+id/linesFragment"
@@ -43,75 +57,39 @@
   <fragment
     android:id="@+id/informationFragment"
     android:name="org.galio.bussantiago.features.information.InformationFragment"
-    tools:layout="@layout/information_fragment"></fragment>
+    tools:layout="@layout/information_fragment"/>
 
   <fragment
     android:id="@+id/incidencesFragment"
     android:name="org.galio.bussantiago.features.incidences.IncidencesFragment"
-    tools:layout="@layout/incidences_fragment"></fragment>
+    tools:layout="@layout/incidences_fragment"/>
 
   <fragment
     android:id="@+id/busStopsFragment"
     android:name="org.galio.bussantiago.features.stops.BusStopsContainerFragment"
-    tools:layout="@layout/busstopscontainer_fragment"></fragment>
+    tools:layout="@layout/busstopscontainer_fragment"/>
 
   <fragment
     android:id="@+id/timesFragment"
     android:name="org.galio.bussantiago.features.times.TimesFragment"
-    tools:layout="@layout/times_fragment"></fragment>
-
-  <fragment
-    android:id="@+id/favoritesFragment"
-    android:name="org.galio.bussantiago.features.favorites.FavoritesFragment"
-    tools:layout="@layout/favorites_fragment"></fragment>
-
-  <fragment
-    android:id="@+id/searchFragment"
-    android:name="org.galio.bussantiago.features.search.SearchFragment"
-    tools:layout="@layout/search_fragment">
-
-    <action
-      android:id="@+id/actionShowTimesFromSearch"
-      app:destination="@id/timesFragment"
-      app:popUpTo="@id/searchFragment"
-      app:popUpToInclusive="true" />
-
-  </fragment>
-
-  <fragment
-    android:id="@+id/settingsFragment"
-    android:name="org.galio.bussantiago.features.settings.SettingsFragment"
-    tools:layout="@layout/settings_fragment"></fragment>
+    tools:layout="@layout/times_fragment"/>
 
   <dialog
     android:id="@+id/aboutFragment"
     android:name="org.galio.bussantiago.features.about.AboutFragment"
-    tools:layout="@layout/about_fragment"></dialog>
+    tools:layout="@layout/about_fragment"/>
+
+  <dialog
+    android:id="@+id/favoritesFragment"
+    android:name="org.galio.bussantiago.features.favorites.FavoritesDialogFragment"
+    tools:layout="@layout/favorites_dialog_fragment"/>
 
   <action
     android:id="@+id/actionShowTimesFragment"
     app:destination="@id/timesFragment" />
 
   <action
-    android:id="@+id/actionShowFavorites"
-    app:destination="@id/favoritesFragment"
-    app:popUpTo="@id/nav_graph" />
-
-  <action
-    android:id="@+id/actionShowLines"
-    app:destination="@id/linesFragment"
-    app:popUpTo="@id/nav_graph" />
-
-  <action
     android:id="@+id/actionShowSearchBusStop"
     app:destination="@id/searchFragment" />
-
-  <action
-    android:id="@+id/actionShowSettings"
-    app:destination="@id/settingsFragment" />
-
-  <action
-    android:id="@+id/actionShowAbout"
-    app:destination="@id/aboutFragment" />
 
 </navigation>
