--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,10 +15,6 @@
       app:destination="@id/linesFragment" />
 
     <action
-      android:id="@+id/actionShowFavorites"
-      app:destination="@id/favoritesFragment" />
-
-    <action
       android:id="@+id/actionShowAbout"
       app:destination="@id/aboutFragment" />
 
@@ -69,27 +65,18 @@
     android:name="org.galio.bussantiago.features.stops.BusStopsContainerFragment"
     tools:layout="@layout/busstopscontainer_fragment"/>
 
-  <fragment
-    android:id="@+id/timesFragment"
-    android:name="org.galio.bussantiago.features.times.TimesFragment"
-    tools:layout="@layout/times_fragment"/>
-
   <dialog
     android:id="@+id/aboutFragment"
     android:name="org.galio.bussantiago.features.about.AboutFragment"
     tools:layout="@layout/about_fragment"/>
 
   <dialog
-    android:id="@+id/favoritesFragment"
-    android:name="org.galio.bussantiago.features.favorites.FavoritesDialogFragment"
-    tools:layout="@layout/favorites_dialog_fragment"/>
+    android:id="@+id/timesDialogFragment"
+    android:name="org.galio.bussantiago.features.times.TimesDialogFragment"
+    tools:layout="@layout/times_dialog_fragment"/>
 
   <action
-    android:id="@+id/actionShowTimesFragment"
-    app:destination="@id/timesFragment" />
-
-  <action
-    android:id="@+id/actionShowSearchBusStop"
-    app:destination="@id/searchFragment" />
+    android:id="@+id/actionShowTimes"
+    app:destination="@id/timesDialogFragment" />
 
 </navigation>
