--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -76,7 +76,7 @@
     tools:layout="@layout/times_dialog_fragment" >
 
     <!-- TODO: Define a proper deep link pattern in shared module -->
-    <deepLink app:uri="myapp://timesDialogFragment/{bus_stop_code}/{bus_stop_name}" />
+    <deepLink app:uri="myapp://times/{bus_stop_code}/{bus_stop_name}" />
   </dialog>
 
   <action
