--- a/widget/src/main/res/xml/widget_wprovider.xml
+++ b/widget/src/main/res/xml/widget_wprovider.xml
@@ -5,7 +5,7 @@
   android:minHeight="130dp"
   android:minResizeWidth="110dp"
   android:minResizeHeight="110dp"
-  android:label="@string/favorite_stop"
+  android:label="@string/widget_label"
   android:previewImage="@drawable/preview_app_widget"
   android:resizeMode="horizontal|vertical"
   android:configure="org.galio.bussantiago.widget.WidgetActivity"
