--- a/app/src/main/res/layout/busstopscontainer_fragment.xml
+++ b/app/src/main/res/layout/busstopscontainer_fragment.xml
@@ -12,11 +12,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    app:tabTextColor="@android:color/white" />
+    app:tabTextColor="@android:color/white"
+    tools:ignore="UnusedIds" />
 
   <androidx.viewpager2.widget.ViewPager2
     android:id="@+id/stops_viewPager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    tools:ignore="UnusedIds" />
 
 </LinearLayout>
