--- a/widget/src/main/res/layout/app_widget.xml
+++ b/widget/src/main/res/layout/app_widget.xml
@@ -9,17 +9,20 @@
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:baselineAligned="false"
     android:orientation="horizontal"
-    android:padding="5dp"
-    android:background="@color/colorPrimary"
-    android:baselineAligned="false">
+    android:background="@color/colorPrimary">
 
     <LinearLayout
       android:id="@+id/busStopContainer"
       android:layout_width="0dp"
       android:layout_weight="1"
       android:layout_height="match_parent"
-      android:orientation="vertical">
+      android:orientation="vertical"
+      android:paddingTop="5dp"
+      android:paddingStart="5dp"
+      android:paddingBottom="5dp"
+      tools:ignore="RtlSymmetry">
 
       <TextView
         android:layout_width="match_parent"
@@ -49,63 +52,49 @@
 
     </LinearLayout>
 
-    <FrameLayout
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent">
+    <LinearLayout
+      android:id="@+id/syncContainer"
+      android:layout_width="50dp"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
 
-      <LinearLayout
-        android:id="@+id/syncContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <FrameLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_horizontal">
-
-          <ImageView
-            android:id="@+id/refresh_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_sync"
-            android:clickable="true"
-            android:padding="1dp"
-            android:visibility="visible"
-            android:focusable="true"
-            android:contentDescription="@string/sync_widget" />
-
-          <ProgressBar
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:id="@+id/progressBar"
-            android:padding="1dp"
-            android:visibility="gone" />
-
-        </FrameLayout>
-
-        <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:id="@+id/hourSync_textview"
-          android:textSize="13dp"
-          android:textColor="#ff5a595b"
-          android:gravity="bottom"
-          android:layout_marginLeft="4dp"
-          android:layout_marginRight="4dp"
-          tools:ignore="SpUsage"
-          tools:text="22:00" />
-
-      </LinearLayout>
-
-      <ImageView
-        android:id="@+id/syncView"
+      <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="ContentDescription" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    </FrameLayout>
+        <ImageView
+          android:id="@+id/refresh_button"
+          android:layout_width="24dp"
+          android:layout_height="24dp"
+          android:src="@drawable/ic_sync"
+          android:visibility="visible"
+          android:focusable="true"
+          android:contentDescription="@string/sync_widget"
+          android:layout_gravity="center" />
+
+        <ProgressBar
+          style="?android:attr/progressBarStyleSmall"
+          android:layout_width="24dp"
+          android:layout_height="24dp"
+          android:id="@+id/progressBar"
+          android:visibility="gone"
+          android:layout_gravity="center" />
+
+      </FrameLayout>
+
+      <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/hourSync_textview"
+        android:textSize="13dp"
+        android:textColor="#ff5a595b"
+        android:gravity="center"
+        android:paddingBottom="5dp"
+        tools:ignore="SpUsage"
+        tools:text="22:00" />
+
+    </LinearLayout>
 
   </LinearLayout>
 
