--- a/app/src/main/res/layout/incidences_fragment.xml
+++ b/app/src/main/res/layout/incidences_fragment.xml
@@ -11,6 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
+    android:scrollbars="vertical"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:listitem="@layout/incidence_item" />
 
