--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -57,8 +57,7 @@
 
   <fragment
     android:id="@+id/incidencesFragment"
-    android:name="org.galio.bussantiago.features.incidences.IncidencesFragment"
-    tools:layout="@layout/incidences_fragment">
+    android:name="org.galio.bussantiago.features.incidences.IncidencesFragment">
 
     <argument
       android:name="lineId"
